panel component html added

--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -12,7 +12,12 @@
     <label class="form-check-label" for="webCheck">
         Una página web (500€)
       </label>
+
 </div>
+<div>
+    <app-panel></app-panel>
+</div>
+
 <div class="form-check pt-2">
     <input consultoriaCheckbox 
     type="checkbox"
