--- a/src/app/home/components/home/panel/panel.component.html
+++ b/src/app/home/components/home/panel/panel.component.html
@@ -1,15 +1,17 @@
 <div class="d-inline-flex flex-column p-4 border rounded-3">
     <div class="dflex ">
         <p>Número de páginas</p>
-        <button type="button" class="btn btn-primary">+</button>
-        <input type="number">
-        <button type="button" class="btn btn-primary">-</button>
+        <button type="button" class="btn btn-primary" (click)="decreasePages()">-</button>
+        <input type="number" value="1" id="pages" [(ngModel)]="pages">
+        <button type="button" class="btn btn-primary" (click)="increasePages()">+</button>
+
     </div>
     <div class="dflex">
         <p>Número de idiomas</p>
-        <button type="button" class="btn btn-primary">+</button>
-        <input type="number">
-        <button type="button" class="btn btn-primary">-</button>
+        <button type="button" class="btn btn-primary" (click)="decreaseLanguages()">-</button>
+        <input type="number" value="1" id="languages" [(ngModel)]="languages">
+        <button type="button" class="btn btn-primary" (click)="increaseLanguages()">+</button>
+
     </div>
 </div>
 
