--- a/src/app/home/components/home/panel/panel.component.html
+++ b/src/app/home/components/home/panel/panel.component.html
@@ -1,16 +1,15 @@
 <div class="d-inline-flex flex-column p-4 border rounded-3">
     <div class="dflex ">
         <p>Número de páginas</p>
-        <button type="button" class="btn btn-primary" (click)="decreasePages()">-</button>
-        <input type="number" value="1" id="pages" [(ngModel)]="pages">
-        <button type="button" class="btn btn-primary" (click)="increasePages()">+</button>
-
+        <button type="button" class="btn btn-primary" (click)="panelService.decreasePages()">-</button>
+        <input type="number" value="1" id="pages" [(ngModel)]="panelService.pages">
+        <button type="button" class="btn btn-primary" (click)="panelService.increasePages()">+</button>
     </div>
     <div class="dflex">
         <p>Número de idiomas</p>
-        <button type="button" class="btn btn-primary" (click)="decreaseLanguages()">-</button>
-        <input type="number" value="1" id="languages" [(ngModel)]="languages">
-        <button type="button" class="btn btn-primary" (click)="increaseLanguages()">+</button>
+        <button type="button" class="btn btn-primary" (click)="panelService.decreaseLanguages()">-</button>
+        <input type="number" value="1" id="languages" [(ngModel)]="panelService.languages">
+        <button type="button" class="btn btn-primary" (click)="panelService.increaseLanguages()">+</button>
 
     </div>
 </div>
