--- a/src/app/home/components/home/panel/panel.component.html
+++ b/src/app/home/components/home/panel/panel.component.html
@@ -1,15 +1,24 @@
 <div class="d-inline-flex flex-column p-4 border rounded-3">
     <div class="dflex ">
         <p>Número de páginas</p>
-        <button type="button" class="btn btn-primary" (click)="panelService.decreasePages()">-</button>
-        <input type="number" value="1" id="pages" [(ngModel)]="panelService.pages">
-        <button type="button" class="btn btn-primary" (click)="panelService.increasePages()">+</button>
+        <button type="button" class="btn btn-primary" (click)="homeService.decreasePages()">-</button>
+        <input class="border border-0" style="text-align:center;" type="number" value="1" id="pages" [(ngModel)]="homeService.pages" [formControl]="pagesCtrl">
+        <p *ngIf="pagesCtrl.errors && pagesCtrl.dirty">
+           <small *ngIf="pagesCtrl.hasError('required')">Debes ingresar un número de páginas</small> 
+           <small *ngIf="pagesCtrl.hasError('maxLength')">Ingresa un número de dos cifras</small> 
+           <small *ngIf="pagesCtrl.hasError('min')">Una web debe tener como mínimo una página</small> 
+
+        </p>
+        <button type="button" class="btn btn-primary" (click)="homeService.increasePages()">+</button>
+        <i class="bi bi-info-circle-fill mx-2" style="font-size:24px;"></i>
+  
     </div>
     <div class="dflex">
         <p>Número de idiomas</p>
-        <button type="button" class="btn btn-primary" (click)="panelService.decreaseLanguages()">-</button>
-        <input type="number" value="1" id="languages" [(ngModel)]="panelService.languages">
-        <button type="button" class="btn btn-primary" (click)="panelService.increaseLanguages()">+</button>
+        <button type="button" class="btn btn-primary" (click)="homeService.decreaseLanguages()">-</button>
+        <input class="border border-0 col-sm" style="text-align:center;" type="number" value="1" id="languages" [(ngModel)]="homeService.languages" [formControl]="languagesCtrl">
+        <button type="button" class="btn btn-primary" (click)="homeService.increaseLanguages()">+</button>
+        <i class="bi bi-info-circle-fill mx-2" style="font-size:24px;"></i>
 
     </div>
 </div>
