--- a/src/app/home/components/home/panel/panel.component.html
+++ b/src/app/home/components/home/panel/panel.component.html
@@ -9,7 +9,7 @@
            <small *ngIf="pagesCtrl.hasError('min')">Una web debe tener como mínimo una página</small> 
         </p>
         <button type="button" class="btn btn-primary" (click)="homeService.increasePages()">+</button>
-        <i class="bi bi-info-circle-fill mx-2" style="font-size:24px;"></i>
+        <i (click)="modal.open(contenido)" class="bi bi-info-circle-fill mx-2" style="font-size:24px;"></i>
   
     </div>
     <div class="dflex">
@@ -17,7 +17,7 @@
         <button type="button" class="btn btn-primary" (click)="homeService.decreaseLanguages()">-</button>
         <input class="border border-0 col-sm" style="text-align:center;" type="number" value="1" id="languages" [(ngModel)]="homeService.languages" [formControl]="languagesCtrl">
         <button type="button" class="btn btn-primary" (click)="homeService.increaseLanguages()">+</button>
-        <i class="bi bi-info-circle-fill mx-2" style="font-size:24px;"></i>
+        <i (click)="modalService.openLG(contenido)" class="bi bi-info-circle-fill mx-2" style="font-size:24px;"></i>
 
     </div>
 </div>
