--- a/src/app/home/components/modal/modal.component.html
+++ b/src/app/home/components/modal/modal.component.html
@@ -1,3 +1,4 @@
+<i (click)="modalService.openLG(contenido)" class="bi bi-info-circle-fill mx-2" style="font-size:24px;"></i>
 
 <ng-template #contenido let-modal>
     <div class="modal-header">
