--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -1,51 +1,78 @@
-<p>¿Qué quieres hacer?</p>
-<div class="form-check pt-2">
-    <input webCheckbox 
-    type="checkbox"
-    [(ngModel)] = "homeService.budget.web"
-    name = "web"
-    class="form-check-input"
-    value="false"
-    id="webCheck"
-    (change)="homeService.updatePrice()"
-    />
-    <label class="form-check-label" for="webCheck">
-        Una página web (500€)
-      </label>
 
-</div>
-<div *ngIf="homeService.budget.web !== false">
-    <app-panel></app-panel>
-</div>
+<form [formGroup]="homeService.budgetForm" novalidate (ngSubmit)="homeService.save($event)">
 
-<div class="form-check pt-2">
-    <input consultoriaCheckbox 
-    type="checkbox"
-    [(ngModel)] = "homeService.budget.consultoria"
-    name = "consultoria"
-    class="form-check-input"
-    value="false"
-    id="consultCheck"
-    (change)="homeService.updatePrice()"
-    />
-    <label class="form-check-label" for="consultCheck">
-        Una consultoría de SEO (300€)
-    </label>
-</div>
-<div class="form-check pt-2">
-    <input addsCheckbox 
-    type="checkbox"
-    [(ngModel)] = "homeService.budget.adds"
-    name = "adds"
-    class="form-check-input"
-    value="false"
-    id="addsCheck"
-    (change)="homeService.updatePrice()"
-    />
-    <label class="form-check-label" for="addsCheck">
-        Una campaña de Google Adds (200€)
-    </label>
-</div>
-<div class="total pt-2">
-    <p>El precio total es: {{ homeService.budget.total }} €</p>
-</div>
+    <p>
+        Budget Name: <br/>
+        <input type="text" formControlName = "name">
+    </p>
+    <div *ngIf="homeService.nameField && homeService.nameField.errors && homeService.nameField.touched">
+        <p *ngIf="homeService.nameField.hasError('required')">
+            A budget name is required.
+        </p> 
+    </div>
+
+    <p>
+        Client: <br/>
+        <input type="text" formControlName = "client">
+    </p>
+
+    <p>¿Qué quieres hacer?</p>
+    
+    <div class="form-check pt-2">
+        <input webCheckbox 
+        formControlName = "budgetItems"
+        type="checkbox"
+        [(ngModel)] = "homeService.budget.web"
+        name = "web"
+        class="form-check-input"
+        value="false"
+        id="webCheck"
+        (change)="homeService.updatePrice()"
+        />
+        <label class="form-check-label" for="webCheck">
+            Una página web (500€)
+          </label>
+    
+    </div>
+    <div *ngIf="homeService.budget.web !== false">
+        <app-panel></app-panel>
+    </div>
+    
+    <div class="form-check pt-2">
+        <input consultoriaCheckbox 
+        formControlName = "budgetItems"
+        type="checkbox"
+        [(ngModel)] = "homeService.budget.consultoria"
+        name = "consultoria"
+        class="form-check-input"
+        value="false"
+        id="consultCheck"
+        (change)="homeService.updatePrice()"
+        />
+        <label class="form-check-label" for="consultCheck">
+            Una consultoría de SEO (300€)
+        </label>
+    </div>
+    <div class="form-check pt-2">
+        <input addsCheckbox 
+        formControlName = "budgetItems"
+        type="checkbox"
+        [(ngModel)] = "homeService.budget.adds"
+        name = "adds"
+        class="form-check-input"
+        value="false"
+        id="addsCheck"
+        (change)="homeService.updatePrice()"
+        />
+        <label class="form-check-label" for="addsCheck">
+            Una campaña de Google Adds (200€)
+        </label>
+    </div>
+    <div class="total pt-2">
+        <p>El precio total es: {{ homeService.budget.total }} €</p>
+    </div>
+
+
+    <button type="submit">Save Budget</button>
+
+</form>
