--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -1,78 +1,93 @@
 
-<form [formGroup]="homeService.budgetForm" novalidate (ngSubmit)="homeService.save($event)">
+<div class="container">
+    <div class="row header"></div>
+    <div class="row">
+        <div class="col col-6-xl bg-secondary-subtle p-4">
+            
+            <form [formGroup]="homeService.budgetForm" novalidate (ngSubmit)="homeService.save($event)">
+            
+                <p>
+                    Budget Name: <br/>
+                    <input type="text" formControlName = "name">
+                </p>
+                <div *ngIf="homeService.nameField && homeService.nameField.errors && homeService.nameField.touched">
+                    <p *ngIf="homeService.nameField.hasError('required')">
+                        A budget name is required.
+                    </p> 
+                </div>
+            
+                <p>
+                    Client: <br/>
+                    <input type="text" formControlName = "client">
+                </p>
+            
+                <p>¿Qué quieres hacer?</p>
+                
+                <div class="form-check pt-2">
+                    <input webCheckbox 
+                    formControlName = "web"
+                    type="checkbox"
+                    [(ngModel)] = "homeService.budget.web"
+                    name = "web"
+                    class="form-check-input"
+                    value="false"
+                    id="webCheck"
+                    (change)="homeService.updatePrice()"
+                    />
+                    <label class="form-check-label" for="webCheck">
+                        Una página web (500€)
+                      </label>
+                
+                </div>
+                <div *ngIf="homeService.budget.web !== false">
+                    <app-panel></app-panel>
+                </div>
+                
+                <div class="form-check pt-2">
+                    <input consultoriaCheckbox 
+                    formControlName = "consultoria"
+                    type="checkbox"
+                    [(ngModel)] = "homeService.budget.consultoria"
+                    name = "consultoria"
+                    class="form-check-input"
+                    value="false"
+                    id="consultCheck"
+                    (change)="homeService.updatePrice()"
+                    />
+                    <label class="form-check-label" for="consultCheck">
+                        Una consultoría de SEO (300€)
+                    </label>
+                </div>
+                <div class="form-check pt-2">
+                    <input addsCheckbox 
+                    formControlName = "adds"
+                    type="checkbox"
+                    [(ngModel)] = "homeService.budget.adds"
+                    name = "adds"
+                    class="form-check-input"
+                    value="false"
+                    id="addsCheck"
+                    (change)="homeService.updatePrice()"
+                    />
+                    <label class="form-check-label" for="addsCheck">
+                        Una campaña de Google Adds (200€)
+                    </label>
+                </div>
+                <div class="total pt-2">
+                    <p>El precio total es: {{ homeService.budget.total }} €</p>
+                </div>
+            
+            
+                <button class="btn btn-primary" type="submit">Save Budget</button>
+            
+            </form>
 
-    <p>
-        Budget Name: <br/>
-        <input type="text" formControlName = "name">
-    </p>
-    <div *ngIf="homeService.nameField && homeService.nameField.errors && homeService.nameField.touched">
-        <p *ngIf="homeService.nameField.hasError('required')">
-            A budget name is required.
-        </p> 
-    </div>
-
-    <p>
-        Client: <br/>
-        <input type="text" formControlName = "client">
-    </p>
-
-    <p>¿Qué quieres hacer?</p>
-    
-    <div class="form-check pt-2">
-        <input webCheckbox 
-        formControlName = "budgetItems"
-        type="checkbox"
-        [(ngModel)] = "homeService.budget.web"
-        name = "web"
-        class="form-check-input"
-        value="false"
-        id="webCheck"
-        (change)="homeService.updatePrice()"
-        />
-        <label class="form-check-label" for="webCheck">
-            Una página web (500€)
-          </label>
-    
-    </div>
-    <div *ngIf="homeService.budget.web !== false">
-        <app-panel></app-panel>
-    </div>
-    
-    <div class="form-check pt-2">
-        <input consultoriaCheckbox 
-        formControlName = "budgetItems"
-        type="checkbox"
-        [(ngModel)] = "homeService.budget.consultoria"
-        name = "consultoria"
-        class="form-check-input"
-        value="false"
-        id="consultCheck"
-        (change)="homeService.updatePrice()"
-        />
-        <label class="form-check-label" for="consultCheck">
-            Una consultoría de SEO (300€)
-        </label>
-    </div>
-    <div class="form-check pt-2">
-        <input addsCheckbox 
-        formControlName = "budgetItems"
-        type="checkbox"
-        [(ngModel)] = "homeService.budget.adds"
-        name = "adds"
-        class="form-check-input"
-        value="false"
-        id="addsCheck"
-        (change)="homeService.updatePrice()"
-        />
-        <label class="form-check-label" for="addsCheck">
-            Una campaña de Google Adds (200€)
-        </label>
-    </div>
-    <div class="total pt-2">
-        <p>El precio total es: {{ homeService.budget.total }} €</p>
-    </div>
+        </div>
+        <div class="col col-6-xl bg-primary-subtle p-4">
+            
+        </div>
 
 
-    <button type="submit">Save Budget</button>
 
-</form>
+    </div>
+</div>
