--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,12 +1,8 @@
-<div class="intro px-4">
+<div class="intro px-4 d-flex align-items-center just justify-content-center">
     <div class="row justify-content-center">
-        <div class="col col-sm-8 text-center">
+        <div class="d-grid col-12 text-center mx-auto">
             <h2>Welcome to Budget SetUp</h2>
-        </div>
-    </div>
-    <div class="row justify-content-center text-center">
-        <div class="col mt-4 d-grid col-6">
-            <button routerLink="/home" class="btn btn-lg btn-primary p-4">Comenzar</button>
+            <button routerLink="/home" class="btn btn-lg btn-primary p-4 m-4">Start</button>
         </div>
     </div>
 </div>
