--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -11,7 +11,7 @@
                     <input type="text" formControlName = "name">
                 </p>
                 <div *ngIf="homeService.nameField && homeService.nameField.errors && homeService.nameField.touched">
-                    <p *ngIf="homeService.nameField.hasError('required')">
+                    <p class="text-danger" *ngIf="homeService.nameField.hasError('required')">
                         A budget name is required.
                     </p> 
                 </div>
@@ -20,6 +20,14 @@
                     Client: <br/>
                     <input type="text" formControlName = "client">
                 </p>
+                <div *ngIf="homeService.clientField && homeService.clientField.errors && homeService.clientField.touched">
+                    <p class="text-danger" *ngIf="homeService.clientField.hasError('required')">
+                        A Client name is required.
+                    </p> 
+                    <p class="text-danger" *ngIf="homeService.clientField.hasError('pattern')">
+                        A Client name should be .
+                    </p> 
+                </div>
             
                 <p>¿Qué quieres hacer?</p>
                 
@@ -84,7 +92,24 @@
 
         </div>
         <div class="col col-6-xl bg-primary-subtle p-4">
-            
+            <div class="d-flex">
+                <input type="text">
+                <button class="btn btn-primary">search</button>
+            </div>
+            <div class="text-center">
+                <div class="row pt-2">
+                    <p>Select the ordering method</p>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <button class="btn btn-primary">ABC</button>
+                    <button class="btn btn-primary">Date</button>
+                    <button class="btn btn-primary">Reset</button>
+
+                </div>
+            </div>
+            <div>
+
+            </div>
         </div>
 
 
