--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,15 +4,18 @@
     <div class="row">
         <div class="col col-6-xl bg-secondary-subtle p-4">
             
-            <form [formGroup]="homeService.budgetForm" novalidate (ngSubmit)="homeService.save($event)">
+            <form [formGroup]="homeService.budgetForm" needs-validation novalidate (ngSubmit)="homeService.save($event)">
             
                 <p>
                     Budget Name: <br/>
                     <input type="text" formControlName = "name">
                 </p>
                 <div *ngIf="homeService.nameField && homeService.nameField.errors && homeService.nameField.touched">
-                    <p class="text-danger" *ngIf="homeService.nameField.hasError('required')">
+                    <div class="text-danger errormsg" *ngIf="homeService.nameField.hasError('required')">
                         A budget name is required.
+                    </div>
+                    <p class="text-danger errormsg" *ngIf="homeService.nameField?.hasError('pattern')">
+                        A Client name should be of at least 3 characters.
                     </p> 
                 </div>
             
@@ -21,11 +24,11 @@
                     <input type="text" formControlName = "client">
                 </p>
                 <div *ngIf="homeService.clientField && homeService.clientField.errors && homeService.clientField.touched">
-                    <p class="text-danger" *ngIf="homeService.clientField.hasError('required')">
+                    <p class="text-danger errormsg" *ngIf="homeService.clientField.hasError('required')">
                         A Client name is required.
                     </p> 
-                    <p class="text-danger" *ngIf="homeService.clientField.hasError('pattern')">
-                        A Client name should be .
+                    <p class="text-danger errormsg" *ngIf="homeService.clientField.hasError('pattern')">
+                        A Client name should be of at least 3 characters.
                     </p> 
                 </div>
             
@@ -92,7 +95,7 @@
 
         </div>
         <div class="col col-6-xl bg-primary-subtle p-4">
-            <div class="d-flex">
+            <div class="d-flex justify-content-center">
                 <input type="text">
                 <button class="btn btn-primary">search</button>
             </div>
