--- a/src/app/panel/panel.component.html
+++ b/src/app/panel/panel.component.html
@@ -1,51 +1,61 @@
-<div class="d-inline-flex flex-column p-4 border rounded-3">
-    <form class="needs-validation" novalidate>
+<div class="d-inline-flex flex-column p-4 border rounded-3 bg-light">
+    <form class="" novalidate>
     <div class="row">
         <p>Number of pages</p>
         
-        <button type="button" class="btn btn-primary" (click)="homeService.decreasePages()">-</button>
-        
-        <input class="form-control border border-0" style="text-align:center;" type="number" value="1" id="pages" [(ngModel)]="homeService.pages" [formControl]="pagesCtrl">
-            <p *ngIf="pagesCtrl.errors && pagesCtrl.dirty">
-               <small class="text-danger" *ngIf="pagesCtrl.hasError('required')">Intoduce the number of pages</small> 
-               <small class="text-danger" *ngIf="pagesCtrl.hasError('pattern')">Introduce a number in between 1 and 99</small> 
-            </p>
+        <div class="d-flex">
+            <button type="button" class="btn btn-primary" (click)="homeService.decreasePages()">-</button>
+            
+            <input class="form-control border border-0" style="text-align:center; width: 80px;" type="number" value="1" id="pages" [(ngModel)]="homeService.pages" [formControl]="pagesCtrl">
+                <p *ngIf="pagesCtrl.errors && pagesCtrl.dirty">
+                   <small class="text-danger" *ngIf="pagesCtrl.hasError('required')">Intoduce the number of pages</small> 
+                   <small class="text-danger" *ngIf="pagesCtrl.hasError('pattern')">Introduce a number in between 1 and 99</small> 
+                </p>
+    
+            <button type="button" class="btn btn-primary" (click)="homeService.increasePages()">+</button>
+                
+                
+            <i (click)="pagesModal(); ngbModal.open(contenido)" class="bi bi-info-circle-fill mx-2" style="font-size:24px;"></i>
 
-        <button type="button" class="btn btn-primary" (click)="homeService.increasePages()">+</button>
-            
-            
-        <i (click)="ngbModal.open(contenido)" class="bi bi-info-circle-fill mx-2" style="font-size:24px;"></i>
+        </div>
 
   
     </div>
-    <div class="dflex">
+    <div class="row mt-3">
         <p>Number of languages</p>
-        <button type="button" class="btn btn-primary" (click)="homeService.decreaseLanguages()">-</button>
-        <input class="border border-0 col-sm" style="text-align:center;" type="number" value="1" id="languages" [(ngModel)]="homeService.languages" [formControl]="languagesCtrl">
-        <p *ngIf="languagesCtrl.errors && languagesCtrl.dirty">
-            <small class="text-danger" *ngIf="languagesCtrl.hasError('pattern')">Introduce the number of languages</small> 
-         </p>
-        <button type="button" class="btn btn-primary" (click)="homeService.increaseLanguages()">+</button>
-        <i (click)="ngbModal.open(contenido)" class="bi bi-info-circle-fill mx-2" style="font-size:24px;"></i>
+
+        <div class="d-flex">
+            
+            <button type="button" class="btn btn-primary" (click)="homeService.decreaseLanguages()">-</button>
+    
+            <input class="form-control border border-0" style="text-align:center; width: 80px;" type="number" value="1" id="languages" [(ngModel)]="homeService.languages" [formControl]="languagesCtrl">
+            
+            <p *ngIf="languagesCtrl.errors && languagesCtrl.dirty">
+                <small class="text-danger" *ngIf="languagesCtrl.hasError('pattern')">Introduce a number in between 1 and 99</small>
+                <small class="text-danger" *ngIf="languagesCtrl.hasError('required')">Intoduce the number of pages</small> 
+            </p>
+            
+            <button type="button" class="btn btn-primary" (click)="homeService.increaseLanguages()">+</button>
+            
+            <i (click)="languagesModal();ngbModal.open(contenido)" class="bi bi-info-circle-fill mx-2" style="font-size:24px;"></i>
+        </div>
+
 
     </div>
     </form>
 </div>
 
 <ng-template #contenido let-modal>
-    <div class="modal-header">
-        <h4 class="modal-title">Título Modal</h4>
-        <button class="close" aria-label="close" type="button" (click)="modal.dismiss()">
+    <div class="modal-header justify-content-end">
+        <button class="close btn btn-light" aria-label="close" type="button" (click)="modal.dismiss()">
             <span aria-hidden="true">&times;</span>
         </button>
-
     </div>
-    <div class="modal-body">
-        Contenido
+    <div class="modal-body text-center">
+        {{ modalMessage }}
     </div>
-    <div class="modal-footer">
-        <button type="button" class="btn btn-success" (click)="modal.close()">ok</button>
+    <div class="modal-footer justify-content-center">
+        <button type="button" class="btn btn-success px-4" (click)="modal.close()">ok</button>
     </div>
-
 </ng-template>
 
