--- a/src/app/budgetlist/budgetlist.component.html
+++ b/src/app/budgetlist/budgetlist.component.html
@@ -1,22 +1,48 @@
 <div class="container">
+  <div class="d-flex justify-content-center">
+    <input type="text">
+    <button class="btn btn-primary">search</button>
+  </div>
+  <div class="text-center">
+    <div class="row pt-2">
+        <p>Select the ordering method</p>
+    </div>
+    <div class="d-flex justify-content-center">
+        <button class="btn btn-primary" (click)="this.sortByABC()">ABC</button>
+        <button class="btn btn-primary" (click)="this.sortByDate()" >Date</button>
+        <button class="btn btn-primary">Reset</button>
+
+    </div>
+  </div>
+
+
+  <div class="pt-3">
+
+
     <ng-container *ngIf="this.lists">
-    <table class="table">
+    <table class="table table-bordered">
         <thead>
           <tr>
             <th scope="col">Client</th>
             <th scope="col">Budget Name</th>
-            <th scope="col">Services</th>
+            <th scope="col" class="col-5">Services</th>
             <th scope="col">Total</th>
           </tr>
         </thead>
         <tbody>
-                <tbody *ngFor="let budget of lists; let i = index">
-                    <td>{{budget.name}}</td>
+                <tbody class="border" *ngFor="let budget of lists; let i = index">
                     <td>{{budget.client}}</td>
-                    <td>{{budget.web}}</td> 
+                    <td>{{budget.name}}</td>
+                    <td class="services-cell">
+                      <span *ngIf="budget.web">Web, </span>
+                      <span *ngIf="budget.consultoria">Consulting, </span>
+                      <span *ngIf="budget.adds">Adds</span>
+                    </td>
+
                     <td>{{budget.total}}</td> 
         </tbody>
               
       </table>
     </ng-container>
+  </div>
 </div>
