--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row header"></div>
     <div class="row">
-        <div class="col col-6-xl bg-secondary-subtle p-4">
+        <div class="col col-md-5 col-xl-4 bg-secondary-subtle p-4">
             
             <form [formGroup]="budgetForm" needs-validation novalidate (ngSubmit)="this.save($event)">
             
@@ -43,7 +43,7 @@
                         <input webCheckbox 
                         formControlName = "web"
                         type="checkbox"
-                        [(ngModel)] = "budget.web"
+                        [(ngModel)] = "this.budget.web"
                         name = "web"
                         class="form-check-input"
                         value="false"
@@ -97,7 +97,7 @@
                     </div>
 
                     <div class="total pt-2">
-                        <p>Your budget: {{ this.budget.total }} €</p>
+                        <p>The budget total is: {{ totalBudget }} €</p>
                     </div>
                 
                 
@@ -108,29 +108,11 @@
             </form>
 
         </div>
-        <div class="col col-6-xl bg-primary-subtle p-4">
-            <div class="d-flex justify-content-center">
-                <input type="text">
-                <button class="btn btn-primary">search</button>
-            </div>
-            <div class="text-center">
-                <div class="row pt-2">
-                    <p>Select the ordering method</p>
-                </div>
-                <div class="d-flex justify-content-center">
-                    <button class="btn btn-primary">ABC</button>
-                    <button class="btn btn-primary">Date</button>
-                    <button class="btn btn-primary">Reset</button>
-
-                </div>
-            </div>
-
-            <div class="pt-3">
+        <div class="col col-md-7 col-xl-8 bg-primary-subtle p-4">
+                      
                 <app-budgetlist></app-budgetlist>
-            </div>
+
         </div>
-
-
 
     </div>
 </div>
