--- a/src/app/budgetlist/budgetlist.component.html
+++ b/src/app/budgetlist/budgetlist.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="d-flex justify-content-center">
-    <input type="text">
+    <input type="text" placeholder="Search Client" [(ngModel)]="seachKeyword" (input)="searchBudget()">
     <button class="btn btn-primary">search</button>
   </div>
   <div class="text-center">
@@ -10,7 +10,7 @@
     <div class="d-flex justify-content-center">
         <button class="btn btn-primary" (click)="this.sortByABC()">ABC</button>
         <button class="btn btn-primary" (click)="this.sortByDate()" >Date</button>
-        <button class="btn btn-primary">Reset</button>
+        <button class="btn btn-primary" (click)="this.resetBudgetOrder()" >Reset</button>
 
     </div>
   </div>
@@ -18,8 +18,34 @@
 
   <div class="pt-3">
 
+    <ng-container *ngIf="this.showResults">
+      <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th scope="col">Client</th>
+              <th scope="col">Budget Name</th>
+              <th scope="col" class="col-5">Services</th>
+              <th scope="col">Total</th>
+            </tr>
+          </thead>
+          <tbody>
+                  <tbody class="border" *ngFor="let budget of searchResults; let i = index">
+                      <td>{{budget.client}}</td>
+                      <td>{{budget.name}}</td>
+                      <td class="services-cell">
+                        <span *ngIf="budget.web">Web, </span>
+                        <span *ngIf="budget.consultoria">Consulting, </span>
+                        <span *ngIf="budget.adds">Adds</span>
+                      </td>
+  
+                      <td>{{ budget.total }}</td> 
+          </tbody>
+                
+        </table>
+      </ng-container>
 
-    <ng-container *ngIf="this.lists">
+
+    <ng-container *ngIf="(this.lists) && showResults===false">
     <table class="table table-bordered">
         <thead>
           <tr>
@@ -39,7 +65,7 @@
                       <span *ngIf="budget.adds">Adds</span>
                     </td>
 
-                    <td>{{budget.total}}</td> 
+                    <td>{{ budget.total }}</td> 
         </tbody>
               
       </table>
