--- a/src/app/budgetlist/budgetlist.component.html
+++ b/src/app/budgetlist/budgetlist.component.html
@@ -20,6 +20,7 @@
 
     <ng-container *ngIf="this.showResults">
       <table class="table table-bordered">
+      <caption>Budget(s) found</caption>
           <thead>
             <tr>
               <th scope="col">Client</th>
@@ -47,6 +48,7 @@
 
     <ng-container *ngIf="(this.lists) && showResults===false">
     <table class="table table-bordered">
+      <caption>List of Budgets</caption>
         <thead>
           <tr>
             <th scope="col">Client</th>
